Fixed h1 position and size on each page. Resized and positioned menu portrait on mobile view

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -97,9 +97,37 @@
     #home h1 {
       margin-top: 10vh;
     }
+
+
+    &#about h1 {
+      font-size: 5rem;
+      line-height: 1;
+      margin-bottom: 3rem;
+      margin-top: 2rem;
+    }
+
+    &#work h1 {
+      font-size: 4rem;
+      line-height: 1;
+      margin-bottom: 3rem;
+      margin-top: 2rem;
+    }
+
+    &#contact h1 {
+      font-size: 5rem;
+      line-height: 1;
+      margin-bottom: 3rem;
+      margin-top: 2rem;
+    }
   }
 
   .projects {
     grid-template-columns: 1fr;
+  }
+
+  .menu-branding .portrait {
+    background-size: contain;
+    height: 150px;
+    width: 150px;
   }
 }
